Prevent Vector tabs from overlapping search loader
Bug: T254695

--- a/variables.less
+++ b/variables.less
@@ -116,6 +116,7 @@
 @z-index-sidebar: 1;
 @z-index-menu-checkbox: 1;
 @z-index-search-button: 1;
+@z-index-search-loader: 1;
 // Ensure that this is displayed on top of .mw-body-content and clickable.
 @z-index-indicators: 1;
 // See skinStyles/jquery.ui/jquery.ui.slider.css.
